--- a/about_me.html
+++ b/about_me.html
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 			<div class="topnav">
-				<a href="./home.html">Home</a>
+				<a href="./index.html">Home</a>
 				<a class="active" href="./about_me.html">About Me</a>
 				<a href="./projects.html">Projects</a>
 				<a href="./contact.html">Contact</a>
