--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<body class="backgroundClass">
 	
 		<div class="topnav">
-			<a href="./home.html">Home</a>
+			<a href="./index.html">Home</a>
 			<a href="./about_me.html">About Me</a>
 			<a href="./projects.html">Projects</a>
 			<a class="active" href="./contact.html">Contact</a>
