--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 			<div class="topnav">
-				<a href="./home.html">Home</a>
+				<a href="./index.html">Home</a>
 				<a href="./about_me.html">About Me</a>
 				<a class="active" href="./projects.html">Projects</a>
 				<a href="./contact.html">Contact</a>
